@@ -2,7 +2,7 @@ sdparm (1.11-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 03 Jun 2018 23:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 30 Jun 2018 22:00:00 +0200
 
 sdparm (1.10-0.1) unstable; urgency=low
 
