@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.11 [20180603] [svn: r318]
+ChangeLog for sdparm-1.11 [20180630] [svn: r319]
   - add Out of band management control mpage (spl5r01)
   - accept additional tansport acronyms (e.g. ib for srp)
   - power condition mpage: rename fields IDLE->IDLE_A;
@@ -24,11 +24,12 @@ ChangeLog for sdparm-1.11 [20180603] [svn: r318]
   - command=capacity with --long force read capacity(16)
     with full reporting of response
   - --wscan option: expand bus type to include NVMe
-  - point svn:externals to rev 777 of sg3_utils
+  - point svn:externals to rev 779 of sg3_utils
   - convert many two valued 'int's to bool
   - shellcheck corrections on scripts
   - upgrade automake to version 1.15 (U16.04)
   - rework configure.ac and src/Makefile.am
+  - add --enable-debug to ./configure
   - update BSD license from 3 to 2 clause aka FreeBSD
     license (without reference to FreeBSD project)
   - debian: bump compat file contents from 7 to 10
